added basic implementation for roman conversion and refactored the code for better readability
