# docs/swagger.json
@@ -12,32 +12,9 @@
     "host": "localhost:8001",
     "basePath": "/",
     "paths": {
-        "/": {
+        "/convert": {
             "get": {
-                "description": "do ping",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "example"
-                ],
-                "summary": "ping example",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/GetRoman": {
-            "get": {
-                "description": "Get the roman numeral equivalent for a given decimal",
+                "description": "Get the roman numeral equivalent for a given decimal(s) in ascending order",
                 "produces": [
                     "application/json"
                 ],
@@ -47,9 +24,29 @@
                 "summary": "Get Roman Numeral",
                 "responses": {
                     "200": {
-                        "description": "Successfully retrieved a Roman",
+                        "description": "Successfully retrieved Roman Numerals",
                         "schema": {
-                            "$ref": "#/definitions/models.Roman"
+                            "$ref": "#/definitions/models.RomanNumeral"
+                        }
+                    }
+                }
+            }
+        },
+        "/ranges": {
+            "get": {
+                "description": "Get the roman numeral equivalent for given ranges in ascending order",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "romans"
+                ],
+                "summary": "Get Roman Numerals for Ranges of Numbers",
+                "responses": {
+                    "200": {
+                        "description": "Successfully retrieved Roman Numerals",
+                        "schema": {
+                            "$ref": "#/definitions/models.RomanNumeral"
                         }
                     }
                 }
@@ -57,10 +54,10 @@
         }
     },
     "definitions": {
-        "models.Roman": {
+        "models.RomanNumeral": {
             "type": "object",
             "properties": {
-                "decimal": {
+                "number": {
                     "type": "integer"
                 },
                 "roman": {
