# pkg/models/roman.go
@@ -1,6 +1,0 @@
-package models
-
-type Roman struct {
-	Decimal uint   `json:"decimal"`
-	Roman   string `json:"roman"`
-}
