# pkg/models/romannumeral.go
@@ -1,0 +1,7 @@
+package models
+
+// RomanNumeral struct defines the response model for the converted numbers.
+type RomanNumeral struct {
+	Decimal uint   `json:"number"`
+	Roman   string `json:"roman"`
+}
